--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,6 +3,7 @@ project(Quack_Compiler)
 
 set(CMAKE_CXX_STANDARD 14)
 
+find_package(Boost COMPONENTS filesystem REQUIRED)
 find_package(BISON 3.4.2)
 find_package(FLEX 2.6.4)
 
@@ -11,6 +12,7 @@ FLEX_TARGET(MyScanner src/qk.lpp  ${CMAKE_CURRENT_BINARY_DIR}/lexer.cpp)
 ADD_FLEX_BISON_DEPENDENCY(MyScanner MyParser)
 
 include_directories(${CMAKE_CURRENT_BINARY_DIR})
+include_directories(${Boost_INCLUDE_DIRS})
 include_directories(./src/)
 
 file(GLOB qkc_SRC "./src/*.hpp" "./src/*.cpp")
